Fix spacing issues

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -29,7 +29,7 @@
 .Main {
     min-height: 100vh;
     height: 100%;
-    margin-top: 80px;
+    margin-top: 78px;
 }
 .Main > iframe {
     min-height: 100vh;
@@ -72,7 +72,7 @@
 }
 .submitLink {
     vertical-align: top;
-    padding-right: 20px;
+    margin-right: 15px;
     text-transform: uppercase;
     font-family: Helvetica Neue, Helvetica, sans-serif;
     font-weight: bold;
